Tiny fix: overflow auto for dropdown options

--- a/styles/sass/partials/_dropdown.scss
+++ b/styles/sass/partials/_dropdown.scss
@@ -41,8 +41,7 @@
         left: 0;
         right: 0;
         border: 1px solid $cloudy2;
-        overflow: scroll;
-        overflow-x: hidden;
+        overflow: auto;
         max-height: 320px;
         z-index: 10;
 
